
name:               music-imitator
version:            0.5
cabal-version:      >= 1.2
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            GPL-3
license-file:       COPYING
synopsis:           Spacial loop playback based on hsc3.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    Spacial loop playback based on hsc3.

library                    
    build-depends: 
        base        >= 4 && < 5,
        wx          == 0.90.0.1,
        unix,     
        stm,
        newtype,
        hamid,
        hosc,
        hsc3,
        semigroups
                
    hs-source-dirs: src
    exposed-modules:
        Music.Imitator
        Music.Imitator.Reactive
        Music.Imitator.Sound    
        Music.Imitator.Util

executable "Imitator"
    hs-source-dirs: src
    main-is: Main.hs
    ghc-options: -threaded -O3

