
name:               music-imitator
version:            0.6
cabal-version:      >= 1.2
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            GPL-3
license-file:       COPYING
synopsis:           Spacial loop playback based on hsc3.
category:           Music
tested-with:        GHC
build-type:         Simple

description:
    Spacial loop playback based on hsc3.

library
    build-depends:
        base        >= 4 && < 5,
        wx          == 0.90.0.1,
        unix,
        random,
        directory,
        hosc,
        hsc3,
        reenact,
        tau,
        NumInstances,
        diagrams,
        diagrams-lib,
        diagrams-svg,
        bytestring,
        blaze-svg,
        semigroups,
        semigroupoids,
        vector-space,
        music-score, 
        music-pitch-literal,
        music-dynamics-literal,
        reverse-apply >= 2.0

    hs-source-dirs: src
    exposed-modules:
        Music.Imitator
        Music.Imitator.Sound
        Music.Imitator.Sound.Prim
        Music.Imitator.Sound.Event
        Music.Imitator.Util

    other-modules:
        Score

executable "Imitator"
    hs-source-dirs: src
    main-is: Main.hs
    ghc-options: -threaded -O3
    -- Use --enable-executable-profiling

